# HW27_2

./: db.sqlite3  manage.py  pyproject.toml
HW27_2/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  urls.py  views.py
ads/management/commands/: loadfixtures.py
ads/migrations/: 0001_initial.py
data/: csv_to_json.py  location.json  user.json
pg_db/: docker-compose.yaml
pg_db/pg_data/base/13756/: 2619
pg_db/pg_data/base/13757/: pg_internal.init
pg_db/pg_data/base/16384/: 1247  1249  1259  16385  16386  16391  16393  16394  16397  16399  16401  16402  16405  16407  16411  16415  16419  16421  16428  16443  16447  16448  16453  16454  16456  16457  16460  16462  16463  16466  16468  16469  16473  16474  16476  16478  16482  16484  16495  16510  (+40 more)
pg_db/pg_data/global/: 1260  1262  2671  pg_control  pg_internal.init
users/: admin.py  models.py  urls.py  views.py
