[tool.poetry]
name = "hw27-2"
version = "0.1.0"
description = ""
authors = ["1 <avhapov@gmail.com>"]
readme = "README.md"
packages = [{include = "hw27_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
