[tool.poetry]
name = "hw27-2"
version = "0.1.0"
description = ""
authors = ["1 <avhapov@gmail.com>"]
readme = "README.md"
packages = [{include = "hw27_2"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2 = "^2.9.5"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
